--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "files": [
       "./dist",
       "./electron",
-      "!**/node_modules/**"
+      "!**/node_modules/**/{*.md,*.tsbuildinfo,.gitignore}",
+      "node_modules/axios"
     ],
     "asar": false,
     "nsis": {
@@ -60,6 +61,9 @@
       "installerHeaderIcon": "./build/electron-icon/icon.ico",
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true
+    },
+    "electronDownload": {
+      "mirror": "https://npmmirror.com/mirrors/electron/"
     }
   },
   "devDependencies": {
@@ -84,14 +88,12 @@
     "axios": "^0.27.2",
     "combinate": "^1.1.11",
     "dayjs": "^1.11.3",
-    "echarts": "^5.5.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "qs": "^6.10.5",
     "sass": "^1.53.0",
     "scss": "^0.2.4",
     "view-ui-plus": "^1.3.0",
-    "vue": "3.2.37",
-    "xlsx": "^0.18.5"
+    "vue": "3.2.37"
   }
 }
